# c-dvar

./: .gitmodules  AUTHORS  NEWS  NEWS.md  README  README.md  meson.build
src/: c-dvar-common.c  c-dvar-private.h  c-dvar-reader.c  c-dvar-type.c  c-dvar-type.h  c-dvar-utf8.h  c-dvar-writer.c  c-dvar.c  c-dvar.h  libcdvar.sym  meson.build  test-api.c  test-basic.c  test-enumerated.c  test-string.c  test-type.c  test-utf8.c
